finished pagination by month, buttons to navigate between months and fixed slide down panel to be visible when scrolled down

--- a/System/Resource/css/style.css
+++ b/System/Resource/css/style.css
@@ -44,6 +44,11 @@ h2{
     font-family: 'Mulish', sans-serif;
     font-weight:600;
 }
+h3{
+    color: grey;
+    font-size: 15px;
+    padding-top: 5px;
+}
 hr{
     opacity: 0.1;
     color: #754cf0;
@@ -68,6 +73,7 @@ a:hover{
 }
 header {
     background-color: #754cf0;
+    
     /* background-color: lightgrey; */
     
 }
@@ -197,6 +203,10 @@ label{
 
 footer{
     background-color: #754cf0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
 }
 footer p {
     
@@ -344,7 +354,7 @@ table {
 
 th, td{
     padding: 5px 1px;
-    font-size: 18px;
+    font-size: 12px;
     text-align:center;
 }
 
@@ -370,17 +380,19 @@ td{
     padding: 10px 5px;
     border-radius: 5px;
     border: 1px solid rgba(117,76,240,1);
-    color: rgba(117,76,240,1);
-    background-color: rgba(117,76,240,0.1);;
+    color: black;
+    background-color: rgb(9, 139, 9);
+    /* background-color: rgba(117,76,240,0.1); */
     /* -webkit-box-shadow: 4px 4px 4px -3px rgba(102, 101, 101,1);
     -moz-box-shadow: 4px 4px 4px -3px rgb(102, 101, 101,1);
     box-shadow: 4px 4px 4px -3px rgb(102, 101, 101,1); */
     /* font-weight: 700; */
 }
 .delete {
-    background-color: rgb(253, 241, 238);
-    color:rgb(245, 89, 28);
-    border:1px solid rgb(245, 89, 28);
+    background-color:rgb(185, 45, 45);
+    color: black;
+    /* border:1px solid rgb(7, 7, 7); */
+    border: none;
 }
 tbody tr:last-child td:first-child{
     border-bottom-left-radius:4px;
@@ -388,6 +400,7 @@ tbody tr:last-child td:first-child{
 tbody tr:last-child td:last-child{
     border-bottom-right-radius:4px;
 }
+
 .credit{
     color: green;
     font-weight: bold;
@@ -417,9 +430,33 @@ tbody tr:last-child td:last-child{
     margin: 10px 0;
     
 }
+#openAside:hover{
+    cursor: pointer;
+}
 #pop_up_section1, #pop_up_section2, #pop_up_section3, #pop_up_section4, #pop_up_section5{
     display:none;
 }
+/* ---------------- */
+/* Cash Register */
+/* ---------------- */
+.paginator{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;   
+    margin: 10px 0  0;     
+}
+.paginator div{
+    margin: 0 20px;
+}
+.btn_disabled, .btn_enabled{
+    padding: 5px; 
+    background-color: rgb(240, 239, 239);  
+    border:1px solid lightgrey;                      
+}
+.btn_disabled{
+    background: white;
+}
+
 
 /* ----------------------------------------------*/
 /* ----------------------------------------------*/
@@ -438,6 +475,14 @@ tbody tr:last-child td:last-child{
     .table_users{
         width: 60%;
     }
+    th, td{
+        font-size: 18px;
+    }
+    h3{
+        font-size: 20px;
+        padding-top: 0;
+    }
+    
   }
 
 
